# File-bot

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  log to cookie.py  pyproject.toml  railway.toml  requirements.txt
bot/: config.py  main.py
bot/db/: db.py  repo.py
bot/handlers/: admin.py  cookies.py  errors.py  files.py  merge.py  splits.py  start.py  url.py
bot/services/: cookies.py  health.py  jobs.py  quota.py  splitter.py
bot/utils/: format.py  text.py
tests/: test_cookies.py  test_splitter.py
