[project]
name = "file-bot"
version = "0.1.0"
description = "Telegram bot that downloads any forwarded file and re-uploads it, optionally split into smart parts. Streams chunks so it stays under tight disk budgets (Railway 1 GB free tier)."
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]
